[gd_scene load_steps=3 format=3 uid="uid://bqx8y2n3m4p5q"]

[ext_resource type="Script" uid="uid://c8hdus8ojn6x8" path="res://scenes/Menus/MainMenu/save_slot_selection.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://bxlt2ju7qgrqv" path="res://theme.tres" id="2_theme"]

[node name="SaveSlotSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
z_index = -99
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.3, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select Save Slot"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SlotContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Slot1" type="HBoxContainer" parent="VBoxContainer/SlotContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Slot1Info" type="VBoxContainer" parent="VBoxContainer/SlotContainer/Slot1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot1Label" type="Label" parent="VBoxContainer/SlotContainer/Slot1/Slot1Info"]
layout_mode = 2
text = "Slot 1"
horizontal_alignment = 1

[node name="Slot1Details" type="Label" parent="VBoxContainer/SlotContainer/Slot1/Slot1Info"]
layout_mode = 2
text = "Empty"
horizontal_alignment = 1

[node name="Slot1Buttons" type="VBoxContainer" parent="VBoxContainer/SlotContainer/Slot1"]
layout_mode = 2

[node name="Slot1LoadButton" type="Button" parent="VBoxContainer/SlotContainer/Slot1/Slot1Buttons"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "Load"

[node name="Slot1NewButton" type="Button" parent="VBoxContainer/SlotContainer/Slot1/Slot1Buttons"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "New Game"

[node name="Slot1DeleteButton" type="Button" parent="VBoxContainer/SlotContainer/Slot1/Slot1Buttons"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "Delete"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/SlotContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Slot2" type="HBoxContainer" parent="VBoxContainer/SlotContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Slot2Info" type="VBoxContainer" parent="VBoxContainer/SlotContainer/Slot2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot2Label" type="Label" parent="VBoxContainer/SlotContainer/Slot2/Slot2Info"]
layout_mode = 2
text = "Slot 2"
horizontal_alignment = 1

[node name="Slot2Details" type="Label" parent="VBoxContainer/SlotContainer/Slot2/Slot2Info"]
layout_mode = 2
text = "Empty"
horizontal_alignment = 1

[node name="Slot2Buttons" type="VBoxContainer" parent="VBoxContainer/SlotContainer/Slot2"]
layout_mode = 2

[node name="Slot2LoadButton" type="Button" parent="VBoxContainer/SlotContainer/Slot2/Slot2Buttons"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "Load"

[node name="Slot2NewButton" type="Button" parent="VBoxContainer/SlotContainer/Slot2/Slot2Buttons"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "New Game"

[node name="Slot2DeleteButton" type="Button" parent="VBoxContainer/SlotContainer/Slot2/Slot2Buttons"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "Delete"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/SlotContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Slot3" type="HBoxContainer" parent="VBoxContainer/SlotContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Slot3Info" type="VBoxContainer" parent="VBoxContainer/SlotContainer/Slot3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot3Label" type="Label" parent="VBoxContainer/SlotContainer/Slot3/Slot3Info"]
layout_mode = 2
text = "Slot 3"
horizontal_alignment = 1

[node name="Slot3Details" type="Label" parent="VBoxContainer/SlotContainer/Slot3/Slot3Info"]
layout_mode = 2
text = "Empty"
horizontal_alignment = 1

[node name="Slot3Buttons" type="VBoxContainer" parent="VBoxContainer/SlotContainer/Slot3"]
layout_mode = 2

[node name="Slot3LoadButton" type="Button" parent="VBoxContainer/SlotContainer/Slot3/Slot3Buttons"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "Load"

[node name="Slot3NewButton" type="Button" parent="VBoxContainer/SlotContainer/Slot3/Slot3Buttons"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "New Game"

[node name="Slot3DeleteButton" type="Button" parent="VBoxContainer/SlotContainer/Slot3/Slot3Buttons"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
text = "Delete"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
text = "Back to Main Menu"
